--- a/core/Makefile
+++ b/core/Makefile
@@ -5391,8 +5391,14 @@ $(INTERNAL_OTA_PACKAGE_TARGET): $(BUILT_TARGET_FILES_PACKAGE) $(OTA_FROM_TARGET_
 	@echo "Package OTA: $@"
 	$(call build-ota-package-target,$@,-k $(KEY_CERT_PAIR) --output_metadata_path $(INTERNAL_OTA_METADATA))
 
-.PHONY: otapackage
+CORVUS_TARGET_PACKAGE := $(PRODUCT_OUT)/$(CORVUS_VERSION).zip
+
+.PHONY: otapackage bacon
 otapackage: $(INTERNAL_OTA_PACKAGE_TARGET)
+bacon: otapackage
+	$(hide) ln -f $(INTERNAL_OTA_PACKAGE_TARGET) $(CORVUS_TARGET_PACKAGE)
+	$(hide) $(MD5SUM) $(CORVUS_TARGET_PACKAGE) > $(CORVUS_TARGET_PACKAGE).md5sum
+	@echo "**Package complete"**: $(CORVUS_TARGET_PACKAGE)"
 
 ifeq ($(BOARD_BUILD_RETROFIT_DYNAMIC_PARTITIONS_OTA_PACKAGE),true)
 name := $(product_name)-ota-retrofit-$(FILE_NAME_TAG)
