--- a/core/Makefile
+++ b/core/Makefile
@@ -4940,6 +4940,7 @@ ifeq (true,$(BOARD_PREBUILT_VENDORIMAGE))
 else
 	$(hide) mkdir -p $(zip_root)/IMAGES
 	$(hide) cp $(INSTALLED_VENDORIMAGE_TARGET) $(zip_root)/IMAGES/
+	$(hide) echo "board_prebuilt_vendor_image=true" >> $(zip_root)/META/misc_info.txt
 endif
 endif
 ifdef BOARD_PREBUILT_PRODUCTIMAGE
@@ -4957,6 +4958,7 @@ endif
 ifdef BOARD_PREBUILT_ODMIMAGE
 	$(hide) mkdir -p $(zip_root)/IMAGES
 	$(hide) cp $(INSTALLED_ODMIMAGE_TARGET) $(zip_root)/IMAGES/
+	$(hide) echo "board_prebuilt_odm_image=true" >> $(zip_root)/META/misc_info.txt
 endif
 ifdef INSTALLED_DTBOIMAGE_TARGET
 	$(hide) mkdir -p $(zip_root)/PREBUILT_IMAGES
